# opengl_coockbook

./: .gitignore  CMakeLists.txt
CLanguage/: constexpr_if.cpp  conteiners_STL.h  lambda.h  main.cpp  stl_containers.cpp  svertka.cpp  templates.h
chapter01/: CMakeLists.txt  chapter_01.cpp  charpter_01.h  load_shader.cpp  load_shader.h  main.cpp
chapter01/shader/: basic.frag  basic.vert  uniform_block.frag
chapter02/: CMakeLists.txt  adsReflection.cpp  adsReflection.h  adsTwoSide.cpp  adsTwoSide.h  diffuse_reflection.cpp  diffuse_reflection.h  main.cpp  subProgram.cpp  subProgram.h
chapter02/shader/: ads_reflection.frag  ads_reflection.vert  ads_two_reflection.frag  ads_two_reflection.vert  diffuse_reflection.frag  diffuse_reflection.vert  subroutine.frag  subroutine.vert
include/: header_functions.h
include/glm/: CMakeLists.txt
ingredients/: CMakeLists.txt  scene.h  scenerunner.h
lib/: ingredients.lib
